// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator erd {
  provider                  = "prisma-erd-generator"
  theme                     = "dark"
  includeRelationFromFields = true
}

generator dbml {
  provider              = "prisma-dbml-generator"
  includeRelationFields = false
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

model User {
  id       String @id @default(auto()) @map("_id") @db.ObjectId
  email    String @unique
  name     String
  salt     String
  password String

  profile Profile[]
  orders  Orders[]
  apiKey  ApiKey?
}

model ApiKey {
  id     String @id @default(auto()) @map("_id") @db.ObjectId
  key    String
  secret String
  userId String @unique @db.ObjectId

  user User @relation(fields: [userId], references: [id])
}

model Profile {
  id                    String    @id @default(auto()) @map("_id") @db.ObjectId
  name                  String
  interval              String
  symbol                String
  inPosition            Boolean
  lastOrderTime         DateTime?
  lastOrderClosingPrice Float?
  quantity              Float
  stopLoss              Float
  stopEnable            Boolean
  version               Int
  userId                String    @db.ObjectId

  user            User              @relation(fields: [userId], references: [id])
  profilestrategy ProfileStrategy[]
}

model ProfileStrategy {
  id         String @id @default(auto()) @map("_id") @db.ObjectId
  profileId  String @db.ObjectId
  strategyId String @db.ObjectId

  profile  Profile  @relation(fields: [profileId], references: [id])
  strategy Strategy @relation(fields: [strategyId], references: [id])
}

model Strategy {
  id          String @id @default(auto()) @map("_id") @db.ObjectId
  tag         String
  name        String
  title       String
  description String

  profilestrategy ProfileStrategy[]
}

model Orders {
  id          String   @id @default(auto()) @map("_id") @db.ObjectId
  value       Float
  trade       String
  symbol      String
  profileName String
  createdAt   DateTime @default(now())
  profileId   String   @db.ObjectId
  userId      String   @db.ObjectId

  user User @relation(fields: [userId], references: [id])
}
