//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String [not null]
  salt String [not null]
  password String [not null]
}

Table ApiKey {
  id String [pk]
  key String [not null]
  secret String [not null]
  userId String [unique, not null]
}

Table Profile {
  id String [pk]
  name String [not null]
  interval String [not null]
  symbol String [not null]
  inPosition Boolean [not null]
  lastOrderTime DateTime
  lastOrderClosingPrice Float
  quantity Float [not null]
  stopLoss Float [not null]
  stopEnable Boolean [not null]
  version Int [not null]
  userId String [not null]
}

Table ProfileStrategy {
  id String [pk]
  profileId String [not null]
  strategyId String [not null]
}

Table Strategy {
  id String [pk]
  tag String [not null]
  name String [not null]
  title String [not null]
  description String [not null]
}

Table Orders {
  id String [pk]
  value Float [not null]
  trade String [not null]
  symbol String [not null]
  profileName String [not null]
  createdAt DateTime [default: `now()`, not null]
  profileId String [not null]
  userId String [not null]
}

Ref: ApiKey.userId - User.id

Ref: Profile.userId > User.id

Ref: ProfileStrategy.profileId > Profile.id

Ref: ProfileStrategy.strategyId > Strategy.id

Ref: Orders.userId > User.id